syntax = "proto3";

import "google/protobuf/timestamp.proto";

package membershipCommandService;

option go_package = "./;membershipCommandService";

message Membership {
  string ID = 1;
  string UserID = 2;
  string GroupID = 3;
  int64  Status = 4;
  int64  Role = 5;
  google.protobuf.Timestamp CreatedAt = 6;
  google.protobuf.Timestamp UpdatedAt = 7;
}


message CreateMembershipReq {
  string ID = 1;
  string UserID = 2;
  string GroupID = 3;
  int64  Status = 4;
  int64  Role = 5;
}

message CreateMembershipRes {
  string ID = 1;
}


message UpdateMembershipReq {
  string ID = 1;
  int64  Status = 4;
  int64  Role = 5;
}

message UpdateMembershipRes {}

message GetMembershipByIdReq {
  string ID = 1;
}

message GetMembershipByIdRes {
  Membership Membership = 1;
}
